Fix a minor UI bug on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -83,7 +83,6 @@ html::-webkit-scrollbar-thumb:hover {
   width: 100%;
   height: 100%;
   background-image: url(../../public/Homepage/hero.jpg);
-  min-height: 500px;
 
   background-attachment: fixed;
   background-position: center;
